--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,43 @@
 {
-  "extends": ["@chainio/eslint-config-chainio"]
+  "plugins": ["jest"],
+  "env": {
+    "jest/globals": true,
+    "jasmine": true,
+    "node": true,
+    "es6": true
+  },
+  "extends": ["airbnb-base", "plugin:jest/recommended"],
+  "rules": {
+    "arrow-body-style": 0,
+    "semi": ["error", "never"],
+    "no-underscore-dangle": "off",
+    "no-restricted-syntax": "off",
+    "comma-dangle": "off",
+    "no-console": "error",
+    "class-methods-use-this": 0,
+    "indent": ["error", 2, {
+      "MemberExpression": 0,
+      "SwitchCase": 1,
+      "VariableDeclarator": 1,
+      "outerIIFEBody": 1,
+      "FunctionDeclaration": {
+        "parameters": 1,
+        "body": 1
+      },
+      "FunctionExpression": {
+        "parameters": 1,
+        "body": 1
+      }
+    }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": [
+          "node_modules",
+          "."
+        ]
+      }
+    }
+  }
 }
